Limit the number of fields added during merge
The mapping merge executed on the master node is the only authoritative place where we have a consistent state of the cluster state as it's guaranteed to be executed on a single thread on the master node.

Therefore, this is the best place to add as many fields as possible without going over the limit if true_until_limit configured on an object.

This change guarantees that the cluster state update never fails due to dynamic mapping updates that exceed the field limit in a context where  true_until_limit is active.

This works because after each dynamic mapping update, the indexing request gets retried so that the document parsing takes the new mapping into account.

This only applies to dynamic mapping updates aka auto-updates. When explicitly trying to update the mapping with too many fields, the operation should still fail, even if true_until_limit is active in the current object's context.